--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"dev": "nodemon dist/index.js",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"create:migration": "mikro-orm migration:create"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,6 +25,7 @@
 		"@mikro-orm/migrations": "^4.4.1",
 		"@mikro-orm/postgresql": "^4.4.1",
 		"apollo-server-express": "^2.19.2",
+		"argon2": "^0.27.1",
 		"express": "^4.17.1",
 		"graphql": "^15.5.0",
 		"type-graphql": "^1.1.1"
